bindings/c/whiteout_m3.h

typedef struct whiteout_M3ParticleEmitter whiteout_M3ParticleEmitter;
typedef struct whiteout_M3ParticleEmitterCopy whiteout_M3ParticleEmitterCopy;
typedef struct whiteout_M3SplineRibbon whiteout_M3SplineRibbon;
typedef struct whiteout_M3RibbonEmitter whiteout_M3RibbonEmitter;
void whiteout_m3_M3ParticleEmitter_set_splatProjectionIndex(whiteout_M3ParticleEmitter* self, int32_t value);
/* Splat spawn probability */
float whiteout_m3_M3ParticleEmitter_get_splatChance(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_splatChance(whiteout_M3ParticleEmitter* self, float value);
/* Ribbon spawn probability on bounce (v23+) */
float whiteout_m3_M3ParticleEmitter_get_spawnRibbonOnBounceChance(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_spawnRibbonOnBounceChance(whiteout_M3ParticleEmitter* self, float value);
/* Index into RIB_ array (-1 = none, v23+) */
int32_t whiteout_m3_M3ParticleEmitter_get_ribbonLinkIndex(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_ribbonLinkIndex(whiteout_M3ParticleEmitter* self, int32_t value);
/* ── M3ParticleEmitterCopy ─────────────────────────────────────────────── */

/* PARC — Particle emitter copy (v0, 40 bytes) */
/*  */
/* Lightweight copy of a particle emitter with overridden emission rate, squirt amount, and bone index. References the original PAR_ via Model.copyIndices. */
whiteout_M3ParticleEmitterCopy* whiteout_m3_M3ParticleEmitterCopy_new(void);
void whiteout_m3_M3ParticleEmitterCopy_delete(whiteout_M3ParticleEmitterCopy* self);
/* Index into BONE array */
uint32_t whiteout_m3_M3ParticleEmitterCopy_get_boneIndex(const whiteout_M3ParticleEmitterCopy* self);
void whiteout_m3_M3ParticleEmitterCopy_set_boneIndex(whiteout_M3ParticleEmitterCopy* self, uint32_t value);
/* ── M3SplineRibbon ─────────────────────────────────────────────── */

/* SRIB — Spline ribbon segment (v0, 272 bytes) */
/*  */
/* Defines a single segment of a spline-based ribbon with emission offset/vector, velocity, bone binding, and pitch/yaw/velocity variation channels. */
whiteout_M3SplineRibbon* whiteout_m3_M3SplineRibbon_new(void);
void whiteout_m3_M3SplineRibbon_delete(whiteout_M3SplineRibbon* self);
/* Emission point offset from bone */
whiteout_Vector3f* whiteout_m3_M3SplineRibbon_get_emissionOffset(whiteout_M3SplineRibbon* self);
void whiteout_m3_M3SplineRibbon_set_emissionOffset(whiteout_M3SplineRibbon* self, const whiteout_Vector3f* value);
/* Emission direction vector */
whiteout_Vector3f* whiteout_m3_M3SplineRibbon_get_emissionVector(whiteout_M3SplineRibbon* self);
void whiteout_m3_M3SplineRibbon_set_emissionVector(whiteout_M3SplineRibbon* self, const whiteout_Vector3f* value);
/* Reserved (always 0) */
uint32_t whiteout_m3_M3SplineRibbon_get_reserved(const whiteout_M3SplineRibbon* self);
void whiteout_m3_M3SplineRibbon_set_reserved(whiteout_M3SplineRibbon* self, uint32_t value);
/* Index into BONE array */
uint32_t whiteout_m3_M3SplineRibbon_get_boneIndex(const whiteout_M3SplineRibbon* self);
void whiteout_m3_M3SplineRibbon_set_boneIndex(whiteout_M3SplineRibbon* self, uint32_t value);
/* Yaw variation type */
uint32_t whiteout_m3_M3SplineRibbon_get_yawType(const whiteout_M3SplineRibbon* self);
void whiteout_m3_M3SplineRibbon_set_yawType(whiteout_M3SplineRibbon* self, uint32_t value);
/* Pitch variation type */
uint32_t whiteout_m3_M3SplineRibbon_get_pitchType(const whiteout_M3SplineRibbon* self);
void whiteout_m3_M3SplineRibbon_set_pitchType(whiteout_M3SplineRibbon* self, uint32_t value);
/* Velocity variation type */
uint32_t whiteout_m3_M3SplineRibbon_get_velocityType(const whiteout_M3SplineRibbon* self);
void whiteout_m3_M3SplineRibbon_set_velocityType(whiteout_M3SplineRibbon* self, uint32_t value);
/* Precomputed ≈ 0.01 / |emissionVector| */
float whiteout_m3_M3SplineRibbon_get_emissionVectorNormFactor(const whiteout_M3SplineRibbon* self);
void whiteout_m3_M3SplineRibbon_set_emissionVectorNormFactor(whiteout_M3SplineRibbon* self, float value);
/* Precomputed ≈ 0.01 / velocity.initValue */
float whiteout_m3_M3SplineRibbon_get_velocityNormFactor(const whiteout_M3SplineRibbon* self);
void whiteout_m3_M3SplineRibbon_set_velocityNormFactor(whiteout_M3SplineRibbon* self, float value);
/* ── M3RibbonEmitter ─────────────────────────────────────────────── */

/* RIB_ — Ribbon emitter (v4–v9, 744–760 bytes) */
/*  */
/* Ribbon strip effect with per-particle lifetime, velocity, color/size curves, physics, noise, spline segments, variation channels, and smoothing/collision settings. Shares many fields with ParticleEmitter. */
whiteout_M3RibbonEmitter* whiteout_m3_M3RibbonEmitter_new(void);
void whiteout_m3_M3RibbonEmitter_delete(whiteout_M3RibbonEmitter* self);
/* Primary bone index */
uint16_t whiteout_m3_M3RibbonEmitter_get_boneIndex(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_boneIndex(whiteout_M3RibbonEmitter* self, uint16_t value);
/* Fallback bone index */
uint16_t whiteout_m3_M3RibbonEmitter_get_boneIndexFallback(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_boneIndexFallback(whiteout_M3RibbonEmitter* self, uint16_t value);
/* Index into MATM material map array */
uint32_t whiteout_m3_M3RibbonEmitter_get_materialIndex(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_materialIndex(whiteout_M3RibbonEmitter* self, uint32_t value);
/* Additional flags (v8+) */
int32_t whiteout_m3_M3RibbonEmitter_get_additionalFlags(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_additionalFlags(whiteout_M3RibbonEmitter* self, int32_t value);
/* Kill radius */
uint32_t whiteout_m3_M3RibbonEmitter_get_killRadius(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_killRadius(whiteout_M3RibbonEmitter* self, uint32_t value);
/* Gravity X component */
float whiteout_m3_M3RibbonEmitter_get_gravityX(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_gravityX(whiteout_M3RibbonEmitter* self, float value);
/* Gravity Y component */
float whiteout_m3_M3RibbonEmitter_get_gravityY(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_gravityY(whiteout_M3RibbonEmitter* self, float value);
/* Gravity Z component */
float whiteout_m3_M3RibbonEmitter_get_gravity(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_gravity(whiteout_M3RibbonEmitter* self, float value);
/* Size midpoint time (0–1) */
float whiteout_m3_M3RibbonEmitter_get_sizeMidTime(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_sizeMidTime(whiteout_M3RibbonEmitter* self, float value);
/* Color midpoint time (0–1) */
float whiteout_m3_M3RibbonEmitter_get_colorMidTime(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_colorMidTime(whiteout_M3RibbonEmitter* self, float value);
/* Alpha midpoint time (0–1) */
float whiteout_m3_M3RibbonEmitter_get_alphaMidTime(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_alphaMidTime(whiteout_M3RibbonEmitter* self, float value);
/* Rotation midpoint time (0–1) */
float whiteout_m3_M3RibbonEmitter_get_rotationMidTime(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_rotationMidTime(whiteout_M3RibbonEmitter* self, float value);
/* Size hold time at midpoint */
float whiteout_m3_M3RibbonEmitter_get_sizeMidHoldTime(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_sizeMidHoldTime(whiteout_M3RibbonEmitter* self, float value);
/* Color hold time at midpoint */
float whiteout_m3_M3RibbonEmitter_get_colorMidHoldTime(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_colorMidHoldTime(whiteout_M3RibbonEmitter* self, float value);
/* Alpha hold time at midpoint */
float whiteout_m3_M3RibbonEmitter_get_alphaMidHoldTime(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_alphaMidHoldTime(whiteout_M3RibbonEmitter* self, float value);
/* Rotation hold time at midpoint */
float whiteout_m3_M3RibbonEmitter_get_rotationMidHoldTime(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_rotationMidHoldTime(whiteout_M3RibbonEmitter* self, float value);
/* Air drag coefficient */
float whiteout_m3_M3RibbonEmitter_get_drag(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_drag(whiteout_M3RibbonEmitter* self, float value);
/* Segment mass */
float whiteout_m3_M3RibbonEmitter_get_mass(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_mass(whiteout_M3RibbonEmitter* self, float value);
/* Random mass variation */
float whiteout_m3_M3RibbonEmitter_get_massRandom(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_massRandom(whiteout_M3RibbonEmitter* self, float value);
/* Mass–size coupling */
float whiteout_m3_M3RibbonEmitter_get_massSizeMultiplier(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_massSizeMultiplier(whiteout_M3RibbonEmitter* self, float value);
/* Local force channel bitmask */
uint16_t whiteout_m3_M3RibbonEmitter_get_localForces(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_localForces(whiteout_M3RibbonEmitter* self, uint16_t value);
/* World force channel bitmask */
uint16_t whiteout_m3_M3RibbonEmitter_get_worldForces(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_worldForces(whiteout_M3RibbonEmitter* self, uint16_t value);
/* Fallback local force channels */
uint16_t whiteout_m3_M3RibbonEmitter_get_localForcesFallback(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_localForcesFallback(whiteout_M3RibbonEmitter* self, uint16_t value);
/* Fallback world force channels */
uint16_t whiteout_m3_M3RibbonEmitter_get_worldForcesFallback(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_worldForcesFallback(whiteout_M3RibbonEmitter* self, uint16_t value);
/* World force mass multiplier */
float whiteout_m3_M3RibbonEmitter_get_worldForcesMassMultiplier(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_worldForcesMassMultiplier(whiteout_M3RibbonEmitter* self, float value);
/* Noise displacement amplitude */
float whiteout_m3_M3RibbonEmitter_get_noiseAmplitude(const whiteout_M3RibbonEmitter* self);
void whiteout_m3_M3RibbonEmitter_set_noiseAmplitude(whiteout_M3RibbonEmitter* self, float value);