bindings/csharp/Whiteout/M3/NativeMethods.M3.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_splatProjectionIndex(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_splatChance(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_splatChance(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_spawnRibbonOnBounceChance(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_spawnRibbonOnBounceChance(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_ribbonLinkIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_ribbonLinkIndex(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3ParticleEmitterCopy_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitterCopy_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitterCopy_get_boneIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitterCopy_set_boneIndex(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3SplineRibbon_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SplineRibbon_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3SplineRibbon_get_emissionOffset(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SplineRibbon_set_emissionOffset(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3SplineRibbon_get_emissionVector(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SplineRibbon_set_emissionVector(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3SplineRibbon_get_reserved(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SplineRibbon_set_reserved(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3SplineRibbon_get_boneIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SplineRibbon_set_boneIndex(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3SplineRibbon_get_yawType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SplineRibbon_set_yawType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3SplineRibbon_get_pitchType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SplineRibbon_set_pitchType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3SplineRibbon_get_velocityType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SplineRibbon_set_velocityType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3SplineRibbon_get_emissionVectorNormFactor(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SplineRibbon_set_emissionVectorNormFactor(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3SplineRibbon_get_velocityNormFactor(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SplineRibbon_set_velocityNormFactor(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3RibbonEmitter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3RibbonEmitter_get_boneIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_boneIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3RibbonEmitter_get_boneIndexFallback(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_boneIndexFallback(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_materialIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_materialIndex(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3RibbonEmitter_get_additionalFlags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_additionalFlags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3RibbonEmitter_get_killRadius(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_killRadius(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_gravityX(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_gravityX(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_gravityY(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_gravityY(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_gravity(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_gravity(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_sizeMidTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_sizeMidTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_colorMidTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_colorMidTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_alphaMidTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_alphaMidTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_rotationMidTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_rotationMidTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_sizeMidHoldTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_sizeMidHoldTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_colorMidHoldTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_colorMidHoldTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_alphaMidHoldTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_alphaMidHoldTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_rotationMidHoldTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_rotationMidHoldTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_drag(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_drag(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_mass(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_mass(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_massRandom(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_massRandom(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_massSizeMultiplier(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_massSizeMultiplier(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3RibbonEmitter_get_localForces(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_localForces(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3RibbonEmitter_get_worldForces(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_worldForces(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3RibbonEmitter_get_localForcesFallback(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_localForcesFallback(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3RibbonEmitter_get_worldForcesFallback(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_worldForcesFallback(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_worldForcesMassMultiplier(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_worldForcesMassMultiplier(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3RibbonEmitter_get_noiseAmplitude(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3RibbonEmitter_set_noiseAmplitude(IntPtr self, float value);

